FindAssigneesCandidates method implemented
